--- a/src/main/resources/config/log4j.properties
+++ b/src/main/resources/config/log4j.properties
@@ -1,5 +1,5 @@
 # Define the root logger with appender file
-log4j.rootLogger = DEBUG, FILE
+log4j.rootLogger = ERROR, FILE
 
 log4j.category.org.springframework=ERROR
 log4j.category.org.apache=INFO
@@ -10,14 +10,24 @@ log4j.appender.FILE.File=${webapp.root}/WEB-INF/logs/default.log
 
 # Define the layout for file appender
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.FILE.layout.conversionPattern=[%d{HH\:mm\:ss\:SSS}][%p] (%c\:%M) - %m%n 
+log4j.appender.FILE.layout.conversionPattern=[%d{MM-dd-HH-mm-ss}][%p] (%c\:%M) - %m%n 
 
 
 
-# Define the log of application
-log4j.logger.application = DEBUG, application
-log4j.additivity.application = false
-log4j.appender.application = org.apache.log4j.FileAppender
-log4j.appender.application.File=${webapp.root}/WEB-INF/logs/application.log
-log4j.appender.application.layout=org.apache.log4j.PatternLayout
-log4j.appender.application.layout.conversionPattern=[%d{HH\:mm\:ss\:SSS}][%p] (%c\:%M) - %m%n 
+# 异常日志
+log4j.logger.ExceptionLogging = ERROR, ExceptionLogging
+log4j.additivity.ExceptionLogging = false
+log4j.appender.ExceptionLogging = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.ExceptionLogging.DatePattern = '-'yyyy-MM-dd
+log4j.appender.ExceptionLogging.File=${webapp.root}/WEB-INF/logs/applicationException
+log4j.appender.ExceptionLogging.layout=org.apache.log4j.PatternLayout
+log4j.appender.ExceptionLogging.layout.conversionPattern=[%d{MM-dd-HH-mm-ss}][%p] (%c\:%M) - %m%n 
+
+# 方法调用日志
+log4j.logger.MethodInvokeLogging = DEBUG, MethodInvokeLogging
+log4j.additivity.MethodInvokeLogging = false
+log4j.appender.MethodInvokeLogging = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.MethodInvokeLogging.DatePattern = '-'yyyy-MM-dd
+log4j.appender.MethodInvokeLogging.File=${webapp.root}/WEB-INF/logs/applicationMethodInvoke
+log4j.appender.MethodInvokeLogging.layout=org.apache.log4j.PatternLayout
+log4j.appender.MethodInvokeLogging.layout.conversionPattern=[%d{MM-dd-HH-mm-ss}][%p] (%c\:%M) - %m%n 
